fix argo repo name

--- a/manifest/repos.yaml
+++ b/manifest/repos.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argoApplications
+  name: argo-repos
   namespace: argocd
 spec:
   project: default
